--- a/TimeServed/Views/Appointments/Create.cshtml
+++ b/TimeServed/Views/Appointments/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model TimeServed.Models.Appointment
+﻿@model TimeServed.Models.ViewModels.AppointmentClientViewModel
 
 @{
     ViewData["Title"] = "Create";
@@ -13,29 +13,14 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="ApplicationUserId" class="control-label"></label>
-                <input asp-for="ApplicationUserId" class="form-control" />
-                <span asp-validation-for="ApplicationUserId" class="text-danger"></span>
+                <label asp-for="appointment.ClientId" class="control-label"></label>
+                <select asp-for="appointment.ClientId" class="form-control" asp-items="@Model.Clients"></select>
+                <span asp-validation-for="appointment.ClientId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ClientId" class="control-label"></label>
-                <input asp-for="ClientId" class="form-control" />
-                <span asp-validation-for="ClientId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="VisitDate" class="control-label"></label>
-                <input asp-for="VisitDate" class="form-control" />
-                <span asp-validation-for="VisitDate" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="CheckIn" class="control-label"></label>
-                <input asp-for="CheckIn" class="form-control" />
-                <span asp-validation-for="CheckIn" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="CheckOut" class="control-label"></label>
-                <input asp-for="CheckOut" class="form-control" />
-                <span asp-validation-for="CheckOut" class="text-danger"></span>
+                <label asp-for="appointment.VisitDate" class="control-label"></label>
+                <input asp-for="appointment.VisitDate" class="form-control" />
+                <span asp-validation-for="appointment.VisitDate" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
