--- a/TimeServed/Views/Appointments/Index.cshtml
+++ b/TimeServed/Views/Appointments/Index.cshtml
@@ -31,9 +31,6 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.ApplicationUserId)
-            </td>
-            <td>
                 @Html.DisplayFor(modelItem => item.ClientId)
             </td>
             <td>
@@ -46,9 +43,7 @@
                 @Html.DisplayFor(modelItem => item.CheckOut)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.Id">Check-in</a> |
             </td>
         </tr>
 }
