--- a/TimeServed/Views/Appointments/Details.cshtml
+++ b/TimeServed/Views/Appointments/Details.cshtml
@@ -10,39 +10,38 @@
     <h4>Appointment</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ApplicationUserId)
+        <dt class="col-sm-2">
+            Attorney
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ApplicationUserId)
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.applicationUser.FirstName) @Html.DisplayFor(model => model.applicationUser.LastName)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ClientId)
+        <dt class="col-sm-2">
+            Client
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ClientId)
+        <dd class="col-sm-10">
+         @Html.DisplayFor(model => model.client.FirstName) @Html.DisplayFor(model => model.client.LastName)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.VisitDate)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.VisitDate)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.CheckIn)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.CheckIn)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.CheckOut)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.CheckOut)
         </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Back to all appointments</a>
 </div>
