--- a/TimeServed/Views/Admin/Create.cshtml
+++ b/TimeServed/Views/Admin/Create.cshtml
@@ -1,5 +1,5 @@
-﻿@*@page
-@model TimeServed.Models.ApplicationUser
+﻿@model TimeServed.Models.ViewModels.CreateUserWithRoleViewModel;
+
 @{
     ViewData["Title"] = "Create";
 }
@@ -8,41 +8,46 @@
 
 <div class="row">
     <div class="col-md-4">
+
         <h4>Create a new account.</h4>
         <hr />
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Email"></label>
-                <input asp-for="Email" class="form-control" />
-                <span asp-validation-for="Email" class="text-danger"></span>
+                <label asp-for="applicationUser.Email"></label>
+                <input asp-for="applicationUser.Email" class="form-control" />
+                <span asp-validation-for="applicationUser.Email" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Password"></label>
-                <input asp-for="Password" class="form-control" />
-                <span asp-validation-for="Password" class="text-danger"></span>
+                <label asp-for="applicationUser.UserName"></label>
+                <input asp-for="applicationUser.UserName" class="form-control" />
+                <span asp-validation-for="applicationUser.UserName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="FirstName"></label>
-                <input asp-for="FirstName" class="form-control" />
-                <span asp-validation-for="FirstName" class="text-danger"></span>
+                <label asp-for="applicationUser.FirstName"></label>
+                <input asp-for="applicationUser.FirstName" class="form-control" />
+                <span asp-validation-for="applicationUser.FirstName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="LastName"></label>
-                <input asp-for="LastName" class="form-control" />
-                <span asp-validation-for="LastName" class="text-danger"></span>
+                <label asp-for="applicationUser.LastName"></label>
+                <input asp-for="applicationUser.LastName" class="form-control" />
+                <span asp-validation-for="applicationUser.LastName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="StreetAddress"></label>
-                <input asp-for="StreetAddress" class="form-control" />
-                <span asp-validation-for="StreetAddress" class="text-danger"></span>
+                <label asp-for="applicationUser.StreetAddress"></label>
+                <input asp-for="applicationUser.StreetAddress" class="form-control" />
+                <span asp-validation-for="applicationUser.StreetAddress" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="EmployeeId"></label>
-                <input asp-for="EmployeeId" class="form-control" />
-                <span asp-validation-for="EmployeeId" class="text-danger"></span>
+                <label asp-for="applicationUser.EmployeeId"></label>
+                <input asp-for="applicationUser.EmployeeId" class="form-control" />
+                <span asp-validation-for="applicationUser.EmployeeId" class="text-danger"></span>
             </div>
-          
+            <div class="form-group">
+                <label asp-for="applicationUser.UserRole" class="control-label"></label>
+                <select asp-for="applicationUser.UserRole" class="form-control" asp-items="@Model.Roles"></select>
+                <span asp-validation-for="applicationUser.UserRole" class="text-danger"></span>
+            </div>
             <button type="submit" class="btn btn-primary">Create</button>
         </form>
     </div>
@@ -50,5 +55,5 @@
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
-}*@
+}
 
