added in some more views, changed layouts a bit, added auditor controller

--- a/TimeServed/Views/Attorneys/Index.cshtml
+++ b/TimeServed/Views/Attorneys/Index.cshtml
@@ -25,6 +25,7 @@
             <th>
                 @Html.DisplayNameFor(model => model.CheckOut)
             </th>
+            <th>Actions</th>
             <th></th>
         </tr>
     </thead>
