--- a/TimeServed/Views/Home/Privacy.cshtml
+++ b/TimeServed/Views/Home/Privacy.cshtml
@@ -3,4 +3,4 @@
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<p>Project is currently in development. Any use of this site, including its ideas, assets, or code is forbidden without permission from the admin. For more information, please email connorreecefitzgerald@gmail.com</p>
