--- a/TimeServed/Views/Guards/Create.cshtml
+++ b/TimeServed/Views/Guards/Create.cshtml
@@ -27,7 +27,7 @@
                 <select asp-for="LocationId" class ="form-control" asp-items="ViewBag.LocationId"></select>
             </div>
             <div class="form-group">
-                <label asp-for="ApplicationUserId" class="control-label"></label>
+                <label asp-for="ApplicationUserId" class="control-label">Attorney</label>
                 <select asp-for="ApplicationUserId" class ="form-control" asp-items="ViewBag.ApplicationUserId"></select>
             </div>
             <div class="form-group">
