--- a/TimeServed/Views/Guards/Index.cshtml
+++ b/TimeServed/Views/Guards/Index.cshtml
@@ -7,7 +7,7 @@
 <h1>Index</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Add inmate</a>
 </p>
 <table class="table">
     <thead>
@@ -22,7 +22,7 @@
                 @Html.DisplayNameFor(model => model.location)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.applicationUser)
+               Attorney
             </th>
             <th></th>
         </tr>
@@ -39,13 +39,16 @@
             <td>
                 @Html.DisplayFor(modelItem => item.location.LocationName)
             </td>
+            @if (item.ApplicationUserId != null)
+            {
             <td>
-                @Html.DisplayFor(modelItem => item.applicationUser.Id)
+                @Html.DisplayFor(modelItem => item.applicationUser.FirstName) @Html.DisplayFor(modelItem => item.applicationUser.LastName)
             </td>
+            }
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                <a asp-action="Delete" asp-route-id="@item.Id">Release</a>
             </td>
         </tr>
 }
