--- a/TimeServed/Views/Attorneys/Index.cshtml
+++ b/TimeServed/Views/Attorneys/Index.cshtml
@@ -26,7 +26,7 @@
                 @Html.DisplayNameFor(model => model.CheckOut)
             </th>
             <th>Actions</th>
-            <th></th>
+            <th>Status</th>
         </tr>
     </thead>
     <tbody>
@@ -41,38 +41,55 @@
             <td>
                 @Html.DisplayFor(modelItem => item.VisitDate)
             </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CheckIn)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CheckOut)
-            </td>
+            @if (item.CheckIn != null && item.CheckOut != null)
+            {
+                <td>
+                    @Html.DisplayFor(modelItem => item.CheckIn)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.CheckOut)
+                </td>
+            }
+            else
+            {
+                <td>
+                    n/a
+                </td>
+                <td>
+                    n/a
+                </td>
+            }
             @if (item.CheckOut == null && item.CheckIn == null && item.VisitDate.Date == DateTime.Today)
             {
                 <td>
                     <a asp-action="Edit" asp-route-id="@item.Id">Check-in</a>
                 </td>
             }
-            else
+            else if (item.CheckOut != null)
             {
-                <td>
-                    Don't forget!
-                </td>
+                <td>No actions needed</td>
             }
-            @if (item.CheckOut == null && item.VisitDate.Date > DateTime.Today)
+
+            else if (item.CheckOut == null && item.VisitDate.Date > DateTime.Today)
             {
                 <td>
                     <a asp-action="Delete" asp-route-id="@item.Id">Cancel appointment</a>
                 </td>
             }
-            else if(item.CheckIn != null && item.CheckOut != null)
+            @if (item.CheckIn != null && item.CheckOut != null)
             {
                 <td>
-                    Time logged
+                    Completed
                 </td>
+            }
+
+            else
+            {
+                <td>Incomplete</td>
             }
         </tr>
     }
 }
     </tbody>
 </table>
+    <a asp-action="Previous" asp-controller="Attorneys"> Previous Appointments</a>
