--- a/TimeServed/Views/Shared/_Layout.cshtml
+++ b/TimeServed/Views/Shared/_Layout.cshtml
@@ -46,7 +46,7 @@
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Guards" asp-action="Index">Inmates</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Guards" asp-action="AppointmentList">Appointments</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Guards" asp-action="Appointments">Appointments</a>
                             </li>
                         </ul>
                     </div>
