--- a/TimeServed/Views/Attorneys/Delete.cshtml
+++ b/TimeServed/Views/Attorneys/Delete.cshtml
@@ -4,48 +4,34 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Cancel appointment</h1>
 
 <h3>Are you sure you want to cancel this appointment?</h3>
 <div>
-    <h4>Appointment</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ApplicationUserId)
+        <dt class="col-sm-2">
+            Client
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ApplicationUserId)
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.client.FirstName) @Html.DisplayFor(model => model.client.LastName)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ClientId)
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.client.location)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ClientId)
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.client.location.LocationName)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.VisitDate)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.VisitDate)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CheckIn)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CheckIn)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CheckOut)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CheckOut)
         </dd>
     </dl>
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
+        <input type="submit" value="Cancel" class="btn btn-danger" /> |
         <a asp-action="Index">Back to appointments</a>
     </form>
 </div>
