--- a/TimeServed/Views/Guards/Create.cshtml
+++ b/TimeServed/Views/Guards/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model TimeServed.Models.Client
+﻿@model TimeServed.Models.ViewModels.CreateClientWithLocationAndAttorneyViewModel
 
 @{
     ViewData["Title"] = "Create";
@@ -13,22 +13,22 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="FirstName" class="control-label"></label>
-                <input asp-for="FirstName" class="form-control" />
-                <span asp-validation-for="FirstName" class="text-danger"></span>
+                <label asp-for="client.FirstName" class="control-label"></label>
+                <input asp-for="client.FirstName" class="form-control" />
+                <span asp-validation-for="client.FirstName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="LastName" class="control-label"></label>
-                <input asp-for="LastName" class="form-control" />
-                <span asp-validation-for="LastName" class="text-danger"></span>
+                <label asp-for="client.LastName" class="control-label"></label>
+                <input asp-for="client.LastName" class="form-control" />
+                <span asp-validation-for="client.LastName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="LocationId" class="control-label"></label>
-                <select asp-for="LocationId" class ="form-control" asp-items="ViewBag.LocationId"></select>
+                <label asp-for="client.LocationId" class="control-label"></label>
+                <select asp-for="client.LocationId" class ="form-control" asp-items="Model.locations"></select>
             </div>
             <div class="form-group">
-                <label asp-for="ApplicationUserId" class="control-label">Attorney</label>
-                <select asp-for="ApplicationUserId" class ="form-control" asp-items="ViewBag.ApplicationUserId"></select>
+                <label asp-for="client.ApplicationUserId" class="control-label">Attorney</label>
+                <select asp-for="client.ApplicationUserId" class ="form-control" asp-items="Model.applicationUsers"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
