--- a/TimeServed/Views/Guards/Details.cshtml
+++ b/TimeServed/Views/Guards/Details.cshtml
@@ -4,39 +4,40 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+    <h1>@Html.DisplayFor(model => model.FirstName) @Html.DisplayFor(model => model.LastName)</h1>
 
 <div>
-    <h4>Client</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.FirstName)
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.location.LocationName)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.FirstName)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.LastName)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.LastName)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.location)
-        </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.location.LocationName)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.location.StreetAddress)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.location.StreetAddress)
+        </dd>
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.applicationUser)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.applicationUser.Id)
-        </dd>
+        @if (Model.ApplicationUserId != null)
+        {
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.applicationUser.FirstName) @Html.DisplayFor(model => model.applicationUser.LastName)
+            </dd>
+        }
+        else
+        {
+            <dd class="col-sm-10">
+               No attorney
+            </dd>
+        }
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">See all inmates</a>
 </div>
