auditor view now shows total hours worked for an attorney

--- a/TimeServed/Views/Auditors/Index.cshtml
+++ b/TimeServed/Views/Auditors/Index.cshtml
@@ -19,7 +19,7 @@
                 @Html.DisplayNameFor(model => model.CheckOut)
             </th>
             <th>
-                Appointment length
+                Appointment length(h/m/s)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.client)
