--- a/TimeServed/Views/Auditors/Hours.cshtml
+++ b/TimeServed/Views/Auditors/Hours.cshtml
@@ -4,6 +4,7 @@
     ViewData["Title"] = "Index";
 }
 
+
 <h1>Hours worked</h1>
 
 <table class="table">
@@ -15,40 +16,28 @@
             <th>
                 @Html.DisplayNameFor(model => model.hoursWorked)
             </th>
-
-
-            <th></th>
         </tr>
     </thead>
     <tbody>
         @foreach (var item in Model.attorneys)
         {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.FirstName) @Html.DisplayFor(modelItem => item.LastName)
-                </td>
-                @foreach (var item2 in Model.hoursWorked)
-                {
-                    if (Model.hoursWorked.Count > 0)
-                    {
-
-                        <td>
-                            @Html.DisplayFor(modelItem => item2.TotalMinutes)
-                        </td>
-
-                    }
-                    else
-                    {
-                    <tr>
-                        <td>
-                            Nothing to display!
-                        </td>
-                    </tr>
-                }
+            List <TimeSpan> baseTimeSpan = new List<TimeSpan>();
+            var totalTime = TimeSpan.Zero;
+            
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.FirstName) @Html.DisplayFor(modelItem => item.LastName)
+            </td>
+            @foreach (var item2 in Model.appointments.Where(a => a.ApplicationUserId == item.Id))
+            {
+                baseTimeSpan.Add(item2.TimeSpent());
+                totalTime = totalTime + item2.TimeSpent();
             }
-                </tr>
-
-            }
+        <td>
+            @totalTime.Hours:@totalTime.Minutes:@totalTime.Seconds
+        </td>
+        </tr>
+        }
 
     </tbody>
 </table>
