--- a/TimeServed/Views/Auditors/Hours.cshtml
+++ b/TimeServed/Views/Auditors/Hours.cshtml
@@ -1,8 +1,11 @@
 ﻿@model TimeServed.Models.ViewModels.AttorneyReport
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Hours";
 }
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.6.0/Chart.min.js" type="text/javascript"></script>
+    <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+
 
 
 <h1>Hours worked</h1>
@@ -46,6 +49,11 @@
                     @monthlyTime.Hours:@monthlyTime.Minutes:@monthlyTime.Seconds
                 </td>
             </tr>
-    }
-        </tbody>
-    </table>
+        }
+    </tbody>
+</table>
+<div Style="font-family: Corbel; font-size: small ;text-align:center " class="row">
+    <div style="width:100%;height:100%">
+        <canvas id="myChart" style="padding: 0;margin: auto;display: block; "> </canvas>
+    </div>
+</div>
