--- a/TimeServed/Views/Auditors/Index.cshtml
+++ b/TimeServed/Views/Auditors/Index.cshtml
@@ -5,6 +5,18 @@
 }
 
 <h1>Completed appointments</h1>
+@using (Html.BeginForm())
+{
+    <p>
+        @Html.TextBox("nameString", "", new { placeholder = "Search by attorney", style = "width:250px" }) <br />
+    </p>
+}
+@using (Html.BeginForm())
+{
+    <p>
+        @Html.TextBox("searchDate", "", new { placeholder = "Search by date (in numbers)", style = "width:250px" }) <br />
+    </p>
+}
 
 <table class="table">
     <thead>
@@ -35,34 +47,35 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model)
-{
-    @if (item.CheckIn != null && item.CheckOut != null)
-    {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.VisitDate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CheckIn)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CheckOut)
-            </td>
-            <td>
-                @item.TimeSpent().Hours:@item.TimeSpent().Minutes:@item.TimeSpent().Seconds
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.client.FirstName) @Html.DisplayFor(modelItem => item.client.LastName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.client.location.LocationName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.applicationUser.FirstName) @Html.DisplayFor(modelItem => item.applicationUser.LastName)
-            </td>
-        </tr>
-    }
-}
+        @foreach (var item in Model)
+        {
+            @if (item.CheckIn != null && item.CheckOut != null)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.VisitDate)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.CheckIn)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.CheckOut)
+                    </td>
+                    <td>
+                        @item.TimeSpent().Hours:@item.TimeSpent().Minutes:@item.TimeSpent().Seconds
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.client.FirstName) @Html.DisplayFor(modelItem => item.client.LastName)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.client.location.LocationName)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.applicationUser.FirstName) @Html.DisplayFor(modelItem => item.applicationUser.LastName)
+                    </td>
+                </tr>
+            }
+        }
     </tbody>
 </table>
+
