changed something on chart to display names properly

--- a/TimeServed/Views/Auditors/Hours.cshtml
+++ b/TimeServed/Views/Auditors/Hours.cshtml
@@ -60,15 +60,15 @@
      
     </body>
     <script>
-        var hourArray = @Html.Raw(Json.Serialize(ViewBag.hours));
+        var appointmentArray = @Html.Raw(Json.Serialize(ViewBag.hours));
         var nameArray = @Html.Raw(Json.Serialize(ViewBag.names));
-        console.log(hourArray);
+        console.log(appointmentArray);
         
     var dataT = {
             labels: nameArray,
             datasets: [{
                 label: "Attorneys",
-                data: hourArray,
+                data: appointmentArray,
                 fill: false,
                 backgroundColor: ["rgba(54, 162, 235, 0.2)", "rgba(255, 99, 132, 0.2)", "rgba(255, 159, 64, 0.2)", "rgba(255, 205, 86, 0.2)", "rgba(75, 192, 192, 0.2)", "rgba(153, 102, 255, 0.2)", "rgba(201, 203, 207, 0.2)"],
                 borderColor: ["rgb(54, 162, 235)", "rgb(255, 99, 132)", "rgb(255, 159, 64)", "rgb(255, 205, 86)", "rgb(75, 192, 192)", "rgb(153, 102, 255)", "rgb(201, 203, 207)"],
