--- a/TimeServed/Views/Auditors/Hours.cshtml
+++ b/TimeServed/Views/Auditors/Hours.cshtml
@@ -17,10 +17,10 @@
                         Attorney
                     </th>
                     <th>
-                        Total hours(h/m/s)
+                        Total hours
                     </th>
                     <th>
-                        Monthly hours (h/m/s)
+                        Monthly hours
                     </th>
                 </tr>
             </thead>
