--- a/TimeServed/Views/Shared/_Layout.cshtml
+++ b/TimeServed/Views/Shared/_Layout.cshtml
@@ -28,14 +28,17 @@
                 </button>
                 @if (User.IsInRole("Attorney"))
                 {
-                    <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
+            <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
 
-                        <ul class="navbar-nav flex-grow-1">
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Attorneys" asp-action="Index">Appointments</a>
-                            </li>
-                        </ul>
-                    </div>
+                <ul class="navbar-nav flex-grow-1">
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Attorneys" asp-action="Index">Upcoming</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Attorneys" asp-action="Previous">Completed</a>
+                    </li>
+                </ul>
+            </div>
                 }
 
                 @if (User.IsInRole("Guard"))
