--- a/TimeServed/Views/Guards/Appointments.cshtml
+++ b/TimeServed/Views/Guards/Appointments.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Appointments";
 }
 
-<h1>Appointments</h1>
+<h1 class="text-center">Appointments</h1>
 
 <table class="table">
     <thead>
