--- a/TimeServed/Views/Guards/Details.cshtml
+++ b/TimeServed/Views/Guards/Details.cshtml
@@ -8,7 +8,7 @@
 
 <div>
     <hr />
-    <dl class="row">
+    <dl class="card">
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.location.LocationName)
         </dt>
