--- a/TimeServed/Views/Home/Index.cshtml
+++ b/TimeServed/Views/Home/Index.cshtml
@@ -4,35 +4,43 @@
 @if (!User.Identity.IsAuthenticated)
 {
 
-    <div class="text-center">
+    <div class="text-center" style="height:50vh; margin-top:25vh;">
         <h1 class="display-4">Welcome to TimeServed!</h1>
-        <p> Please sign-in or register to continue.</p>
+        <img src="~/favicon.png" style="height: 10vh; margin-top:3vh">
+        <p style="margin-top:5vh;"> Please  <a class="text-primary" asp-area="Identity" asp-page="/Account/Login">Login</a> or <a class="text-primary" asp-area="Identity" asp-page="/Account/Register">Register</a> to continue.</p>
     </div>
 }
 else if (User.Identity.IsAuthenticated && User.IsInRole("Attorney"))
 {
 
-    <div class="text-center">
+    <div class="text-center" style="height:50vh; margin-top:25vh;">
+    
         <h1>Welcome to TimeServed!</h1>
-        <p>To book a new appointment or cancel an upcoming appointment, click upcoming.</p>
+
+        <img src="~/favicon.png" style="height: 10vh; margin-top:3vh">
+        <p style="margin-top:5vh">To book a new appointment or cancel an upcoming appointment, click upcoming.</p>
         <p>To see your completed appointments or your hours logged, click completed.</p>
     </div>
 }
 else if (User.Identity.IsAuthenticated && User.IsInRole("Guard"))
 {
 
-    <div class="text-center">
-        <h1>Welcome to TimeServed!</h1>
-        <p>To add an inmate to the system, or see a list of all inmates, click inmate.</p>
-        <p>To see upcoming attorney appointments, click appointments.</p>
-    </div>
+<div class="text-center" style="height:50vh; margin-top:25vh;">
+    <h1>Welcome to TimeServed!</h1>
+
+    <img src="~/favicon.png" style="height: 10vh; margin-top:3vh">
+    <p style="margin-top:5vh">To add an inmate to the system, or see a list of all inmates, click inmate.</p>
+    <p>To see upcoming attorney appointments, click appointments.</p>
+</div>
 }
 else if (User.Identity.IsAuthenticated && User.IsInRole("Auditor"))
 {
 
-    <div class="text-center">
-        <h1>Welcome to TimeServed!</h1>
-        <p>To see a list of all appointments or search for specific appointments by location, c.</p>
-        <p>To see upcoming attorney appointments, click appointments.</p>
-    </div>
+<div class="text-center" style="height:50vh; margin-top:25vh;">
+    <h1>Welcome to TimeServed!</h1>
+
+    <img src="~/favicon.png" style="height: 10vh; margin-top:3vh">
+    <p class="mt-2" style="margin-top:5vh">To see a list of all appointments or search for specific appointments by location, c.</p>
+    <p>To see upcoming attorney appointments, click appointments.</p>
+</div>
 }
