--- a/TimeServed/Views/Attorneys/Delete.cshtml
+++ b/TimeServed/Views/Attorneys/Delete.cshtml
@@ -6,9 +6,10 @@
 
 
 <h3>Are you sure you want to cancel this appointment?</h3>
+
+<hr />
 <div>
-    <hr />
-    <dl class="row">
+    <dl class="row card">
         <dt class="col-sm-2">
             Client
         </dt>
@@ -27,11 +28,15 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.VisitDate)
         </dd>
+
     </dl>
-    
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Cancel" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to appointments</a>
+        <input type="submit" value="Cancel" class="btn btn-danger" />
+
     </form>
+
+    <br />
+
 </div>
+<a asp-action="Index">Back to appointments</a>
