--- a/TimeServed/Views/Auditors/Hours.cshtml
+++ b/TimeServed/Views/Auditors/Hours.cshtml
@@ -10,8 +10,8 @@
     <body>
         <h1>Hours worked</h1>
 
-        <table class="table">
-            <thead>
+        <table class="table table-bordered">
+            <thead class="thead-light">
                 <tr>
                     <th>
                         Attorney
@@ -24,7 +24,7 @@
                     </th>
                 </tr>
             </thead>
-            <tbody>
+            <tbody class="table-active">
                 @foreach (var item in Model.attorneys)
                 {
                     List<TimeSpan> baseTimeSpan = new List<TimeSpan>();
@@ -52,9 +52,9 @@
                 }
             </tbody>
         </table>
-        <div Style="font-family: Corbel; font-size: small ;text-align:center " class="row">
+        <div Style="font-family: Corbel; font-size: small ;text-align:center; " class="row">
             <div style="width:100%;height:100%">
-                <canvas id="myChart" style="padding: 0;margin: auto;display: block; "> </canvas>
+                <canvas id="myChart" style="padding: 0;margin: auto;display: block; background-color: #abb6c2; border: 3px solid #4E5D6C"> </canvas>
             </div>
         </div>
      
@@ -75,23 +75,24 @@
             datasets: [{
                 label: "Total hours",
                 data: blarg,
-                fill: false,
-                backgroundColor: ["rgba(54, 162, 235, 0.2)", "rgba(255, 99, 132, 0.2)", "rgba(255, 159, 64, 0.2)", "rgba(255, 205, 86, 0.2)", "rgba(75, 192, 192, 0.2)", "rgba(153, 102, 255, 0.2)", "rgba(201, 203, 207, 0.2)"],
-                borderColor: ["rgb(54, 162, 235)", "rgb(255, 99, 132)", "rgb(255, 159, 64)", "rgb(255, 205, 86)", "rgb(75, 192, 192)", "rgb(153, 102, 255)", "rgb(201, 203, 207)"],
+                fill: true,
+                backgroundColor: ["rgba(255, 99, 132, 0.2)", "rgba(255, 159, 64, 0.2)", "rgba(255, 205, 86, 0.2)", "rgba(75, 192, 192, 0.2)", "rgba(153, 102, 255, 0.2)", "rgba(201, 203, 207, 0.2)"],
+                borderColor: ["rgba(255, 99, 132, 0.2)", "rgba(255, 159, 64, 0.2)", "rgba(255, 205, 86, 0.2)", "rgba(75, 192, 192, 0.2)", "rgba(153, 102, 255, 0.2)", "rgba(201, 203, 207, 0.2)"],
                 borderWidth: 1
                 }]
             };
-    var ctx = $("#myChart").get(0).getContext("2d");
+        var ctx = $("#myChart").get(0).getContext("2d");
+       
     var myNewChart = new Chart(ctx, {
             type: 'bar',
             data: dataT,
             options: {
                 responsive: true,
-                title: { display: true, text: 'Attorney Hours' },
+                title: { text: 'Attorney' },
                 legend: { position: 'bottom' },
                 scales: {
                 xAxes: [{ gridLines: { display: false }, display: true, scaleLabel: { display: false, labelString: '' } }],
-                yAxes: [{ gridLines: { display: false }, display: true, scaleLabel: { display: false, labelString: '' }, ticks: { stepSize: 10, beginAtZero: true } }]
+                yAxes: [{ gridLines: { display: false }, display: true, scaleLabel: { display: true, labelString: 'Attorney Hours' }, ticks: { stepSize: 10, beginAtZero: true } }]
             },
         }
         });
