--- a/TimeServed/Views/Guards/Create.cshtml
+++ b/TimeServed/Views/Guards/Create.cshtml
@@ -4,12 +4,10 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+    <h1 class="text-center" style="margin-top:5vh;">Add an inmate</h1>
 
-<h4>Client</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
+<div class="card" style="height: 60vh; width: 40vw; margin: auto">
+    <div class="card-body">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
@@ -30,14 +28,14 @@
                 <label asp-for="client.ApplicationUserId" class="control-label">Attorney</label>
                 <select asp-for="client.ApplicationUserId" class ="form-control" asp-items="Model.applicationUsers"></select>
             </div>
-            <div class="form-group">
+            <div class="form-group text-center" style="margin-top: 2vh; margin-bottom: 2vh">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
-<div>
+<div class="text-center" style="margin-top:5vh; margin-bottom: 3vh">
     <a asp-action="Index">Back to List</a>
 </div>
 
