--- a/TimeServed/Views/Attorneys/Edit.cshtml
+++ b/TimeServed/Views/Attorneys/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Your current appointment:</h1>
+<h1>Thanks for checking in!</h1>
 
 <hr />
 <div class="row">
@@ -12,19 +12,19 @@
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
-            <div class="form-group">
+            <div class="form-group" hidden>
                 <label asp-for="ClientId" class="control-label"></label>
-                <input asp-for="ClientId" class="form-control" readonly/>
+                <input asp-for="ClientId" class="form-control" hidden />
                 <span asp-validation-for="ClientId" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group" hidden>
                 <label asp-for="VisitDate" class="control-label"></label>
-                <input asp-for="VisitDate" class="form-control" readonly/>
+                <input asp-for="VisitDate" class="form-control" hidden />
                 <span asp-validation-for="VisitDate" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group" hidden>
                 <label asp-for="CheckIn" class="control-label"></label>
-                <input asp-for="CheckIn" class="form-control" readonly/>
+                <input asp-for="CheckIn" class="form-control" hidden />
                 <span asp-validation-for="CheckIn" class="text-danger"></span>
             </div>
             @*<div class="form-group">
@@ -32,10 +32,15 @@
                 <input asp-for="CheckOut" class="form-control" readonly/>
                 <span asp-validation-for="CheckOut" class="text-danger"></span>
             </div>*@
+
             <div class="form-group">
+
                 <input type="submit" value="Check-out" class="btn btn-primary" />
             </div>
         </form>
+        <div class="textContainer"></div>
+        <p>Check-in time: @Model.CheckIn</p>
+        <p>When you're finished, please check-out!</p>
     </div>
 </div>
 
