--- a/TimeServed/Views/Auditors/Hours.cshtml
+++ b/TimeServed/Views/Auditors/Hours.cshtml
@@ -52,9 +52,9 @@
                 }
             </tbody>
         </table>
-        <div Style="font-family: Corbel; font-size: small ;text-align:center; " class="row">
-            <div style="width:100%;height:100%">
-                <canvas id="myChart" style="padding: 0;margin: auto;display: block; background-color: #abb6c2; border: 3px solid #4E5D6C"> </canvas>
+        <div Style="font-family: Corbel; font-size: large ;  text-align:center; " class="row">
+            <div style="width:100%;height:100%; padding-top: 2rem; ">
+                <canvas id="myChart" style="padding: 0;margin: auto;display: block; background-color: #abb6c2; border: 3px solid #4E5D6C; font-weight: bold;"> </canvas>
             </div>
         </div>
      
@@ -68,16 +68,16 @@
         for (i = 0; i < hours.length; i++) { 
             blarg.push(hours[i].textContent);
 }
-     console.log(blarg)
         
     var dataT = {
             labels: nameArray,
             datasets: [{
-                label: "Total hours",
+                label: "Attorneys",
+      
                 data: blarg,
-                fill: true,
-                backgroundColor: ["rgba(255, 99, 132, 0.2)", "rgba(255, 159, 64, 0.2)", "rgba(255, 205, 86, 0.2)", "rgba(75, 192, 192, 0.2)", "rgba(153, 102, 255, 0.2)", "rgba(201, 203, 207, 0.2)"],
-                borderColor: ["rgba(255, 99, 132, 0.2)", "rgba(255, 159, 64, 0.2)", "rgba(255, 205, 86, 0.2)", "rgba(75, 192, 192, 0.2)", "rgba(153, 102, 255, 0.2)", "rgba(201, 203, 207, 0.2)"],
+                fill: false,
+                backgroundColor: ["#DF691A", "#2B3E50", "#316135", "#663d3d", "#786372"],
+                borderColor: ["#DF691A", "#2B3E50", "#316135", "#663d3d", "#786372"],
                 borderWidth: 1
                 }]
             };
@@ -89,7 +89,7 @@
             options: {
                 responsive: true,
                 title: { text: 'Attorney' },
-                legend: { position: 'bottom' },
+                legend: { postion: 'bottom' },
                 scales: {
                 xAxes: [{ gridLines: { display: false }, display: true, scaleLabel: { display: false, labelString: '' } }],
                 yAxes: [{ gridLines: { display: false }, display: true, scaleLabel: { display: true, labelString: 'Attorney Hours' }, ticks: { stepSize: 10, beginAtZero: true } }]
