--- a/TimeServed/Views/Shared/_Layout.cshtml
+++ b/TimeServed/Views/Shared/_Layout.cshtml
@@ -40,6 +40,15 @@
                                 <a class="nav-link text-white" asp-area="" asp-controller="Attorneys" asp-action="Previous">Completed</a>
                             </li>
                         }
+                        @if (User.IsInRole("Visitor"))
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-white" asp-area="" asp-controller="Visitor" asp-action="Index">Upcoming</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-white" asp-area="" asp-controller="Visitor" asp-action="Previous">Completed</a>
+                            </li>
+                        }
                         @if (User.IsInRole("Guard"))
                         {
                             <li class="nav-item">
